<resources>
    <string name="app_name">Kuna-Euro converter</string>
    <string name="kuna">Kuna</string>
    <string name="euro">Euro</string>
    <string name="convert">Convert</string>
    <string name="input">Input</string>
    <string name="invalid_input">Invalid input</string>
    <string name="app_title">Convert currency</string>
    <string name="last_fetch">Data fetch failed. Using last data from: </string>
</resources>
